...
    <string name="rammus_ok">Rammus</string>
    <string name="first_main">MAIN</string>
    <string name="second_main">2ⁿᵈ MAIN</string>
    <string name="third_main">3ʳᵈ MAIN</string>
    <string name="summoner_icon">Summoner icon</string>
    <string name="summoner_name">Summoner name</string>
    <string name="add_account">Add account</string>

    <string-array name="regions">
        <item>EUW [EU West]</item>
        <item>BR [Brazil]</item>
        <item>EUNE [EU Nordic &amp; East]</item>
        <item>KR [Republic of Korea]</item>
...
