...
        android:layout_above="@+id/refresh"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/summoner_not_in_game_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dialog_margin"
            android:text="@string/s_is_not_in_game_right_now"
            android:textAlignment="center"
...
